--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@
     --font-size-titulo: 3em;
    
 }
+body{
+    background-color: var(--verde-floresta);
+}
 header{
     width: 100%;
     display: flex;
@@ -31,20 +34,25 @@ header{
     gap: 10px;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--verde-floresta);
+    background-color: var(--vermelho-natalino);
     height: 60px;
+    padding-left: 80px;
+    padding-right: 80px;
 }
 
 header h1{
     font-family: var(--fonte-titulo);
     font-size: 50px;
     color: var(--branco-neve);
+
 }
 h3{
     text-align: center;
     font-family: var(--font-size-titulo);
     font-size: var(--font-size-padrao);
-    color: var(--vermelho-natalino);
+    color: var(--branco-neve);
+    font-weight: 800;
+    text-shadow: 3px 3px 3px var(--vermelho-natalino);
     
 }
 .inputSearch{
@@ -87,6 +95,7 @@ button{
     outline: none;
     background-color: var(--azul-noite);
     color: var(--branco-neve);
+    cursor: pointer;
 }
 button:hover{
     background-color: var(--vermelho-natalino);
@@ -111,13 +120,19 @@ main{
 main h2{
     font-family: var(--fonte-titulo);
     font-size: var(--font-size-titulo);
-    color: var(--vermelho-natalino);
+    color: var(--branco-neve);
     text-align: center;
 }
 main p{
     font-family: var(--fonte-padrao);
     font-size: var(--font-size-padrao);
-    color: var(--azul-noite);
+    color: var(--branco-neve);
+    text-shadow: 2px 2px 2px var(--vermelho-natalino);
+    font-weight: 800;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 #banner{
     display: flex;
@@ -141,7 +156,12 @@ section{
     align-items: center;
     margin-top: 60px;
     margin-bottom: 30px;
-    padding: 10px;
+    padding: 15px;
+    text-align: justify;
+    padding-left: 80px;
+    padding-right: 80px;
+ 
+
 }
 article{
     width: 100%;
@@ -152,37 +172,44 @@ article{
     align-items: center;
     margin-top: 60px;
     margin-bottom: 30px;
-    padding: 10px;
+    padding: 15px;
+    text-align: justify;
+    background-color: var(--branco-neve);
 }
 article h2{
     font-family: var(--fonte-titulo);
     font-size: var(--font-size-titulo);
-    color: var(--vermelho-natalino);
+    color: var(--branco-neve);
 
 }
 article p{
     font-family: var(--fonte-padrao);
     font-size: var(--font-size-padrao);
-    color: var(--azul-noite);
+    color: var(--branco-neve);
+   
 }
+#hulkNatalino{
+  animation: hulkGirando;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+}
+
 .formularioArea{
-    width: 750px;
-    padding: 10px;
-    background-color: var(--dourado);
+    width: 80%;
+    padding: 30px;
+    background-color: var(--branco-neve);
     border-radius: 10px;
+    margin-bottom: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-.formularioArea img{
-    border-radius: 50%;
-}
+
 .papaiNoelContainer{
     display: flex;
     justify-content: center;
     align-items: center;
-
     width: 100%;
     transition: 3s;
 }
@@ -191,13 +218,22 @@ article p{
     animation: piscaLuz;
     animation-duration: 4s;
     animation-iteration-count: infinite;
-    width: 100%;
-  
+    width: 400px;
+    height: 400px;
+    border-radius: 50%; 
+    cursor: pointer;
 }
 #papaiNoelImg:hover{
     border: 10px solid;
    
 
+}
+.hulks{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
 }
 form{
     width: 100%;
@@ -206,12 +242,13 @@ form{
     flex-direction: column;
     margin-top: 60px;
     margin-bottom: 30px;
+    padding: 30px;
    
 }
-form h2{
+form h3{
     font-family: var(--fonte-titulo);
     font-size: var(--font-size-titulo);
-    color: var(--vermelho-natalino);
+    color: var(--dourado);
     text-align: center;
 }
 form label{
@@ -231,7 +268,7 @@ select:hover{
     color: var(--branco-neve);
 }
 textarea{
-    width: 100%;
+    width: 300px;
     height: 100px;
     border: 1px solid var(--vermelho-natalino);
     border-radius: 5px;
@@ -248,12 +285,47 @@ footer{
     align-items: center;
     justify-content: center;
     width: 100%;
-    background-color: var(--verde-floresta);
+    background-color: var(--vermelho-natalino);
     height: 60px;
     color: var(--branco-neve);
     font-size: larger;
 }
-
+#videoInsert {
+    width: 600px;
+    height: 600px;
+    object-fit: cover;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+  }
+  
+  #videoInsert::-webkit-media-controls {
+    background-color: transparent;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+  }
+  
+  #videoInsert::-webkit-media-controls-play-button {
+    background-color: transparent;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+  }
+  
+  #videoInsert::-webkit-media-controls-pause-button {
+    background-color: transparent;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+  }
+  
+  #videoInsert::-webkit-media-controls-volume-slider {
+    background-color: transparent;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+  }
 @keyframes piscaLuz {
     0%{
         border-color: var(--azul-noite);
@@ -263,5 +335,30 @@ footer{
     }
     100%{
         border-color: var(--azul-noite);
+    }
+}
+@keyframes hulkGirando {
+    0%{
+        transform: rotate(0deg);
+        border: 10px solid;
+        border-color: var(--dourado);
+    }
+    50%{
+        transform: rotate(180deg);
+        border: 10px solid;
+        border-color: var(--azul-noite);
+        
+
+    }
+    100%{
+        transform: rotate(360deg);
+        border: 10px solid;
+        border-color: var(--dourado);
+    }
+}
+@media (max-width: 515px) {
+    #papaiNoelImg{
+        width: 250px;
+        height: 250px;
     }
 }
