--- a/css/style.css
+++ b/css/style.css
@@ -366,6 +366,7 @@ textarea:hover {
   width: 100%;
   height: 100%;
   pointer-events: none;
+  color: white;
 }
 .snowflake {
   position: absolute;
